fix logo overlaping to ptext

--- a/app/styles/components/_aside.scss
+++ b/app/styles/components/_aside.scss
@@ -11,7 +11,6 @@
  * Modifiers
  */
 .Aside--left {
-	width: 100%;
 	height: 100%;
 	padding-top: 6rem; // space for our top bar
 	height: 100vh;
@@ -22,8 +21,8 @@
 	top: 0;
 	left: 0;
 	bottom: 0;
-	width: 100%;
 	z-index: 2;
+	width: 100%;
 	background-color: $bg-color;
 	background-image: linear-gradient(to right, darken($bg-color, 2%) 40%, $bg-color);
 
