--- a/app/styles/layout/_root.scss
+++ b/app/styles/layout/_root.scss
@@ -19,9 +19,11 @@
 	.Aside--left {
 		transform: translate3d(0, 0, 0);
 	}
-
 	.SiteMain {
 		padding-left: 15rem;
+	}
+	.Sections {
+		padding-top: 4rem;
 	}
 }
 
